# dotfiles

./: .aliasrc  .gitconfig  .gitignore  .gitmodules  .sops.yaml  .todo  .vimrc  .zshrc  CLAUDE.md  LICENSE.md  README.md  aliasrc  copy.py  flake.nix  install.sh  install_extensions_requirements.sh  install_packages.sh  list_packages.sh  packages.txt  settings-up-new-distro.md  settings.json  starship.toml  startup.md  vimrc  windows-terminal.json  zshrc
Code/: keybindings.json  settings.json
_old/: README.md
assets/: README.md
bootstrap/: README.md  battery.sh  config.sh  cp_services.sh  cp_udev.sh  install_packages.sh  scripts.sh  sym_config.sh  utils.sh
config/: .autostart  .fehbg  .gitconfig  .zshenv  .zshrc  README.md  betterlockscreenrc  libinput-gestures.conf  picom.conf  starship.toml
docs/: battery.md  scripts.md  setup-checklist.md
fish/: config.fish  fish
home-manager/: home.nix
home-manager/anyrun/plugins/currency/: Cargo.toml
home-manager/anyrun/plugins/currency/src/: lib.rs
home/omareloui/features/desktop/hypr/anyrun/plugins/currency/: Cargo.toml
home/omareloui/features/desktop/hypr/anyrun/plugins/currency/src/: lib.rs
nix.wip/: flake.nix
nixos/: configuration.nix  fonts.nix  hardware-configuration.nix  home-servers.nix  homelab.nix  packages.nix  udev.nix  users.nix
nvim/: nvim
overlays/: default.nix
palettes/: __current.sh  _boilerplate.sh  mountain-fuji.sh
pkgs/: default.nix
scripts/: _distro  _wallpaper  adddot  audio-flac-to-mp3  batplug  batsuspend  batwarning  bootstrap  brightness  cloud_backup  install.sh  lock  (+21 more)
(+862 files in other folders)
