[package]
name = "currency"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = { git = "https://github.com/anyrun-org/anyrun", tag="v25.12.0" }
abi_stable = "0.11.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
once_cell = "1.8"
anyhow = "1.0"
